# segger-analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: figure_1a-c.ipynb  figure_3_cell_typing.ipynb  figure_3a-e.ipynb  figure_3g.ipynb  figure_3h.ipynb  heterodata_test.ipynb  requirements.py  xenium_breast_cc_v2_test.ipynb  xenium_colon_10X_comparison.ipynb  xenium_nsclc_cc_v2_test.ipynb  xenium_nsclc_cell_typing.ipynb  xenium_nsclc_comparison_summary.ipynb  xenium_nsclc_contamination.ipynb  xenium_nsclc_oversegmentation_comparison.ipynb
notebooks_share/: requirements.py  xenium_colon_4a-l_4.1a-g.ipynb  xenium_colon_preprocessing.ipynb  xenium_nsclc_3b_3.2a-b_3.3a-d.ipynb  xenium_nsclc_3e-h_3.4a-d.ipynb  xenium_nsclc_preprocessing.ipynb
src/sg_utils/config/: xenium_breast.py
src/sg_utils/pl/: plot_embedding.py  plot_group_markers.py  plot_segmentation.py  plot_segmentation_comparison.py  plot_volcano.py  utils.py
src/sg_utils/pl/assets/: default.mplstyle  named_colors.json
src/sg_utils/pp/: preprocess_rapids.py
src/sg_utils/tl/: celltypist_utils.py  comparison_metrics.py  generate_boundaries.py  get_group_markers.py  phenograph_rapids.py  xenium_utils.py
