[build-system]
requires = ["setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sg_utils"
version = "1.0.0"
description = "Segger analysis"
authors = [
    {name = "Andrew Moorman", email = "moormana@mskcc.org"}
]
license = {text = "MIT License"}

keywords = []
classifiers = []

requires-python = ">=3.8"
dependencies = [
]